--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ services:
   - docker
 
 before_install:
-  - echo "start" Creating an image with dockerfile"
+  - echo "start Creating an image with dockerfile"
   - docker build -t sanghoonjeong/docker-react-app -f Dockerfile.dev .
 
 script:
